RESOLVED FIXED220829
AX: iOS: VO: Web: Column Names Not Announced
https://bugs.webkit.org/show_bug.cgi?id=220829
Summary AX: iOS: VO: Web: Column Names Not Announced
chris fleizach
Reported 2021-01-21 14:24:27 PST
I use table and navigate using keyboard TAB. When my focus is on first cell(first record), voice over should announce cell data and associated column name. But voice over is only reading cell data. for eg. It should announce like "Rene Valdes (sample) column Contact" Please see attached HTML. <rdar://problem/65205242>
Attachments
patch (4.92 KB, patch)
2021-01-22 00:11 PST, chris fleizach
ews-feeder: commit-queue-
patch (7.98 KB, patch)
2021-01-22 12:07 PST, chris fleizach
zalan: review+
cfleizach: commit-queue-
patch (12.98 KB, patch)
2021-01-22 13:46 PST, chris fleizach
ews-feeder: commit-queue-
patch (13.05 KB, patch)
2021-01-24 23:36 PST, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-21 14:24:35 PST
chris fleizach
Comment 2 2021-01-22 00:11:57 PST
chris fleizach
Comment 3 2021-01-22 12:07:19 PST
chris fleizach
Comment 4 2021-01-22 13:44:24 PST
missed that the iOS-wk2 was red. that's because forgot to add the tools part
chris fleizach
Comment 5 2021-01-22 13:46:25 PST
EWS
Comment 6 2021-01-24 23:28:34 PST
commit-queue failed to commit attachment 418178 [details] to WebKit repository.
chris fleizach
Comment 7 2021-01-24 23:36:20 PST
EWS
Comment 8 2021-01-25 00:04:18 PST
commit-queue failed to commit attachment 418254 [details] to WebKit repository.
chris fleizach
Comment 9 2021-01-25 00:06:01 PST
ERROR from SVN: Item already exists in filesystem: File 'LayoutTests/css3/filters/invalid-reference-filter-expected.html' already exists W: 92b1e97282196b11a4bce768b67f2d50a0b17700 and refs/remotes/origin/main differ, using rebase: :040000 040000 a75fe6f00e52c3834161c10ee8ece1e372c69d6a 312defaf4bc3ca73deb15771293eda632a1bbabd M LayoutTests :040000 040000 1edd05c07fd90c70211af03c5a2f12d605cfed20 b1b23d7a6f330e0412d9145084d9316ecb90c285 M Source :040000 040000 5491dbaa04cd680ec1b89f419ed291a59ee5db1d 3410fb91ae746725c0263eca4d4eab0aa7c785a9 M Tools Current branch main is up to date.
Aakash Jain
Comment 10 2021-01-25 04:25:48 PST
Comment on attachment 418254 [details] patch let's try commit-queue one more time. cc @Jonathan for the svn/git issue.
EWS
Comment 11 2021-01-25 04:28:34 PST
Committed r271790: <https://trac.webkit.org/changeset/271790> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418254 [details].
Note You need to log in before you can comment on or make changes to this bug.