Cherry-pick r271790. rdar://problem/73847621

AX: iOS: VO: Web: Column Names Not Announced
    https://bugs.webkit.org/show_bug.cgi?id=220829
    <rdar://problem/73469037>

    Reviewed by Zalan Bujtas.

    Source/WebCore:

    We no longer use containedInTraits, but mean to override the tableAncestor methods.
    Those need to account for the three types of tables.

    Test: accessibility/ios-simulator/table-ancestory.html

    * accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
    (-[WebAccessibilityObjectWrapper _accessibilityTableAncestor]):
    (-[WebAccessibilityObjectWrapper _accessibilityTraitsFromAncestors]):

    Tools:

    * WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
    (WTR::AccessibilityUIElement::isInTable const):
    (WTR::AccessibilityUIElement::isInLandmark const):
    (WTR::AccessibilityUIElement::isInList const):
    * WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
    * WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
    * WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
    (WTR::AccessibilityUIElement::isInTable const):
    (WTR::AccessibilityUIElement::isInLandmark const):
    (WTR::AccessibilityUIElement::isInList const):

    LayoutTests:

    * accessibility/ios-simulator/table-ancestory.html: Added.
    * accessibility/ios-simulator/table-ancestory-expected.txt: Added.
    * accessibility/ios-simulator/tables-lists.html: Updated.

    Canonical link: https://commits.webkit.org/233296@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271790 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.115@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@272273 268f45cc-cd09-0410-ab3c-d52691b4dbfc